--- a/index.html
+++ b/index.html
@@ -1,55 +1,56 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
+  <link rel="stylesheet" href="./main.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <meta charset="utf-8">
   <title>Nordstrom Notes</title>
 </head>
 <body>
-  <!-- Dropdown Structure -->
-  <ul id="dropdown1" class="dropdown-content">
-    <li><a href="#!">Newest</a></li>
-    <li><a href="#!">Oldest</a></li>
-    <li class="divider"></li>
-  </ul>
-  <ul id="dropdown2" class="dropdown-content">
-    <li><a href="#!">Hobby</a></li>
-    <li><a href="#!">Work</a></li>
-    <li class="divider"></li>
-    <li><a href="#!">Personal</a></li>
-  </ul>
   <nav>
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">Nordstrom Notes</a>
-      <ul class="right hide-on-med-and-down">
-        <!-- Dropdown Trigger -->
-        <li><a class="dropdown-trigger" href="#!" data-target="dropdown1">Filter By Date<i class="material-icons right">arrow_drop_down</i></a></li>
-        <li><a class="dropdown-trigger" href="#!" data-target="dropdown2">Filter By Tag<i class="material-icons right">arrow_drop_down</i></a></li>
-      </ul>
+    <div class="nav-wrapper teal lighten-2">
+      <a href="#!" class="brand-logo title">Nordstrom Notes</a>
     </div>
   </nav>
-  <div class="container">
-    <button id="postNote"> Post A Note</button>
+  <div class="container" id="postButton">
+    <!-- <a id="postNote" class="waves-effect waves-light btn-large">Post A Note</a> -->
   </div>
-  <form id="addPost" class="container">
+  <form id="addNote" class="container">
     <div class="dropdownTags">
-      <label>Tag</label>
-      <select class="browser-default">
+      <select id="postTag">
         <option value="" disabled selected>Choose your Tag</option>
-        <option value="1">Hobby</option>
-        <option value="2">Work</option>
-        <option value="3">Personal</option>
+        <option  value="1">Hobby</option>
+        <option  value="2">Work</option>
+        <option  value="3">Personal</option>
       </select>
     </div>
-
-    <div >
+    <div>
       <textarea id="body" placeholder="Enter Your Message"></textarea>
     </div>
     <div >
-      <input type="submit" value="submit">
+      <input id="submitNote" class="waves-effect waves-light btn-large" type="submit" value="Post a Note">
     </div>
   </form>
+  <div class="filters container">
+    <h2 class="noteTitle container">Notes</h2>
+    <select id="filterTag">
+      <option value="" disabled selected>Filter By Tag</option>
+      <option value="1">Hobby</option>
+      <option value="2">Work</option>
+      <option value="3">Personal</option>
+    </select>
+
+    <input id="submitTag" class="waves-effect waves-light btn-large" type="submit" value="Filter Tag">
+
+    <select id="filterDate">
+      <option value="" disabled selected>Filter By Date</option>
+      <option value="1">Newest</option>
+      <option value="2">Oldest</option>
+    </select>
+
+    <input id="submitDate" class="waves-effect waves-light btn-large" type="submit" value="Filter Date">
+  </div>
 
   <div id="output" class="container">
 
