formats code in app and html

--- a/index.html
+++ b/index.html
@@ -39,23 +39,18 @@
       <option value="2">Work</option>
       <option value="3">Personal</option>
     </select>
-
     <input id="submitTag" class="waves-effect waves-light btn-small" type="submit" value="Filter Tag">
-
     <select id="filterDate">
       <option value="" disabled selected>Filter By Date</option>
       <option value="1">Newest</option>
       <option value="2">Oldest</option>
     </select>
-
     <input id="submitDate" class="waves-effect waves-light btn-small" type="submit" value="Filter Date">
   </div>
   <div id="output" class="container">
   </div>
-
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <script type="text/javascript" src="./lib/app.js">
-  </script>
+  <script type="text/javascript" src="./lib/app.js"></script>
 </body>
 </html>
